<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />

            </com.google.android.material.appbar.AppBarLayout>

            <LinearLayout
                android:id="@+id/urlLinerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="200dp"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="297dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginTop="40px"
                    android:layout_marginRight="12px"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/urls_header"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/urls_header"
                        android:textAlignment="center"
                        android:textColor="#4a4a4a"
                        android:textSize="18sp" />

                    <ToggleButton
                        android:id="@+id/startButton"
                        android:visibility="invisible"
                        android:layout_width="match_parent"
                        android:layout_height="75dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/bg_button_off"
                        android:textColor="#4a4a4a"
                        android:textOff="@string/button_start"
                        android:textOn="@string/button_stop" />


                    <ToggleButton
                        android:id="@+id/btnScan"
                        android:layout_width="192dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/bg_button_off"
                        android:textColor="#4a4a4a"
                        android:textOff="Scan QR Code"
                        android:textOn="Scan QR Code" />

                    <TextView
                        android:id="@+id/connectionTypeHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Device Share Url Info:"
                        android:textColor="#4a4a4a"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/connectionURL"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:text="http://192.168.2.102:8080"
                        android:textColor="#5BA4ED"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_qr_readTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ToggleButton
                android:id="@+id/remoteControlEnableSwitch"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="32dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_button_off"
                android:textColor="#4a4a4a"
                android:textOff="@string/button_remote_control_on"
                android:textOn="@string/button_remote_control_off" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/adLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>

